[package]
name = "tonari-actor"
description = "A minimalist actor framework aiming for high performance and simplicity."
version = "0.12.0"
authors = ["Jake McGinty <me@jake.su>", "Matěj Laitl <matej@laitl.cz>", "Ryo Kawaguchi <ryo@kawagu.ch>", "Brian Schwind <brianmschwind@gmail.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/tonarino/actor"
homepage = "https://github.com/tonarino/actor"
readme = "README.md"
keywords = ["actor", "threads"]

[package.metadata.docs.rs]
# Document with all features enabled.
all-features = true
rustc-args = ["--cfg", "tokio_unstable"]

[features]
default = []
async = ["flume/async", "dep:futures-util", "dep:tokio"]

[dependencies]
dashmap = "6"
# Make sure the eventual-fairness feature is disabled for priority queues.
flume = { version = "0.11", default-features = false, features = ["select"] }
futures-util = { version = "0.3", optional = true }
log = "0.4"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt"], optional = true }

[dev-dependencies]
anyhow = "1"
criterion = "0.7"
ctrlc = "3.1"
env_logger = "0.11"
num_cpus = "1"
tokio = { version = "1", features = ["io-util", "net", "time"] }

[[bench]]
name = "benches"
harness = false

[[bench]]
name = "pub_sub"
harness = false

[[example]]
name = "async_actors"
required-features = ["async"]
